--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FreeRide</string>
     <string name="title_activity_maps">Map</string>
+    <string name="no_directions_loaded">Directions could not be loaded for this task</string>
 </resources>
