--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">FreeRide</string>
     <string name="title_activity_maps">Map</string>
-    <string name="no_directions_loaded">Directions could not be loaded for this task</string>
+    <string name="directions_cant_be_loaded">Directions can not be created for this task</string>
+    <string name="directions_not_loaded_yet">Directions have not loaded for this task yet</string>
     <string name="loading_directions">Loading directions for this task...</string>
     <string name="start_colon">Start:</string>
     <string name="end_colon">End:</string>
     <string name="duration_colon">Duration:</string>
     <string name="points_colon">Points:</string>
+    <string name="start">Start</string>
+    <string name="end">End</string>
 </resources>
