--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="points_colon">Points:</string>
     <string name="start">Start</string>
     <string name="end">End</string>
+    <string name="limiting_tasks">Limiting to first 30 tasks from %d total.</string>
 </resources>
