Looks for user accepted tasks on app start-up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,13 +14,13 @@
     <string name="start">Start</string>
     <string name="end">End</string>
     <string name="limiting_tasks">Limiting to first 30 tasks from %d total.</string>
-    <string name="searching_tasks">Searching Tasks</string>
     <string name="one_location_tasks">One Location Tasks</string>
     <string name="two_location_tasks">Two Location Tasks</string>
     <string name="get_tasks">Get Tasks</string>
     <string name="connected">Connected:</string>
-    <string name="database_connect">Database Connect</string>
+    <string name="database_connect">Test Internet Connection</string>
     <string name="true_">True</string>
     <string name="false_">False</string>
     <string name="task_details">Task Details</string>
+    <string name="welcome_to_freeride">Welcome to FreeRide</string>
 </resources>
